--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/icons": "^2.1.0",
     "@sanity/ui": "^1.2.0",
     "@sanity/vision": "^3.0.0",
+    "next-sanity": "^4.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
