--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "package.json",
   "license": "UNLICENSED",
   "scripts": {
-    "dev": "sanity dev",
-    "start": "sanity start",
-    "build": "sanity build",
+    "dev": "next dev",
+    "start": "next start",
+    "build": "next build",
+    "lint": "next lint",
     "deploy": "sanity deploy",
     "deploy-graphql": "sanity graphql deploy"
   },
@@ -18,6 +19,7 @@
     "@sanity/icons": "^2.1.0",
     "@sanity/ui": "^1.2.0",
     "@sanity/vision": "^3.0.0",
+    "next": "^13.3.0",
     "next-sanity": "^4.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
