--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-sanity": "^4.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-is": "^18.2.0",
     "sanity": "^3.0.0",
     "styled-components": "^5.2.0"
