✨ Render Sanity content on to page dynamically

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@portabletext/react": "^2.0.3",
     "@sanity/icons": "^2.1.0",
     "@sanity/ui": "^1.2.0",
     "@sanity/vision": "^3.0.0",
