--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sanity/icons": "^2.1.0",
     "@sanity/ui": "^1.2.0",
     "@sanity/vision": "^3.0.0",
+    "classnames": "^2.3.2",
     "next": "^13.3.0",
     "next-sanity": "^4.1.7",
     "react": "^18.2.0",
