--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,14 +7,11 @@
       "@/components/*": ["components/*"],
       "@/pages/*": ["pages/*"],
       "@/plugins/*": ["plugins/*"],
-      "@/schemas/*": ["schemas/*"]
+      "@/sanity/*": ["sanity/*"],
+      "@/types/*": ["types/*"]
     },
     "target": "ES2017",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -33,12 +30,6 @@
       }
     ]
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
