--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.0.25",
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.14",
