--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@portabletext/react": "^2.0.3",
     "@sanity/icons": "^2.1.0",
+    "@sanity/image-url": "^1.0.2",
     "@sanity/ui": "^1.2.0",
     "@sanity/vision": "^3.0.0",
     "classnames": "^2.3.2",
