--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@sanity/ui": "^1.2.0",
     "@sanity/vision": "^3.0.0",
     "classnames": "^2.3.2",
-    "next": "^13.3.0",
+    "next": "^13.4.3",
     "next-sanity": "^4.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,6 +38,7 @@
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.6.0",
+    "eslint-config-next": "^13.4.3",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "tailwindcss": "^3.3.1",
