--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.3.2",
     "next": "^13.4.3",
     "next-sanity": "^4.1.7",
+    "nodemailer": "^6.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
