--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "@portabletext/react": "^2.0.3",
+    "@sanity/color-input": "^3.1.0",
     "@sanity/icons": "^2.1.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/ui": "^1.2.0",
