--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-icons": "^4.8.0",
     "react-is": "^18.2.0",
     "sanity": "^3.0.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
