--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.4.4",
     "@sanity/eslint-config-studio": "^2.0.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.0.25",
